# pantry-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: pantry_memory.db
docs/: api_analysis.md  architecture.md
docs/diagrams/: agent_flow.mmd  sequence.mmd
src/pantry_agent/: __init__.py  agent.py  api.py  api_client.py  config.py  state.py
src/pantry_agent/memory/: __init__.py  long_term.py  short_term.py
src/pantry_agent/models/: schemas.py
src/pantry_agent/nodes/: __init__.py  agent_node.py  human_approval.py  intent_classifier.py  memory_loader.py  memory_updater.py  response_composer.py  validator.py
src/pantry_agent/observability/: __init__.py  tracing.py
src/pantry_agent/prompts/: system_prompts.py
src/pantry_agent/tools/: __init__.py  ai_extract.py  cooking.py  diet.py  pantry.py  recipes.py  registry.py  sustainability.py  vision.py  waste.py
tests/: conftest.py  test_agent.py  test_api.py  test_config.py  test_intent_classifier.py  test_state.py  test_tools.py
