[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pantry-agent"
version = "0.1.0"
description = "Production-ready LangGraph AI Agent for Intelligent Pantry Management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["langgraph", "langchain", "ai-agent", "pantry", "food-ai"]

dependencies = [
    "langgraph>=0.2.28",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27.0",
    "tenacity>=8.5",
    "langsmith>=0.1.99",
    "python-dotenv>=1.0",
    "typing-extensions>=4.9",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pantry_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
